--- a/Ancestry.Web/Views/Shared/_Layout.cshtml
+++ b/Ancestry.Web/Views/Shared/_Layout.cshtml
@@ -11,7 +11,7 @@
     <script src="~/Scripts/jquery-1.10.2.min.js"></script>
 </head>
 <body>
-    <div class="container body-content">
+    <div >
         @RenderBody()
         @*<hr />
         <footer>
