--- a/Ancestry.Web/Views/Account/Register.cshtml
+++ b/Ancestry.Web/Views/Account/Register.cshtml
@@ -1,6 +1,6 @@
 ﻿
 @{
-    ViewBag.Title = "Login";
+    ViewBag.Title = "Register";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
@@ -14,8 +14,11 @@
             @Html.ValidationMessageFor(m => m.UserName, "", new { @class = "text-danger" })
             @Html.PasswordFor(m => m.Password, new { @placeholder = "Password" })
             @Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger" })
+            @Html.PasswordFor(m => m.Password, new { @placeholder = "Password" })
+            @Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger" })
             <button>login</button>
             <p class="message">Not registered? <a href="#">Create an account</a></p>
         }
     </div>
 </div>
+
