--- a/Ancestry.Web/Views/Account/Login.cshtml
+++ b/Ancestry.Web/Views/Account/Login.cshtml
@@ -15,7 +15,7 @@
             @Html.PasswordFor(m => m.Password, new { @placeholder = "Password" })
             @Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger" })
             <button>login</button>
-            <p class="message">Not registered? <a href="#">Create an account</a></p>
+            <p class="message">Not registered? <a href="@Url.Action("Register","Account")">Create an account</a></p>
         }
     </div>
 </div>
